<resources>
    <string name="app_name">MobiVersa</string>
    <string name="action_logout">Logout</string>
    <string name="mobiversa">Mobiversa</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="hotel_desc">At Hotel MobiHot, we bring you the same wonderful experiences we grew up on: from our warm family hospitality to the authentic aromas in our kitchen, to our flavorful, handmade recipes passed down for more than a generation. Hotel MobiHot’s is enriched with its own identical recipes in the usual Chettinad, North &amp; South Indian, Chinese, Arabian menu by our unique method of selection of raw materials and cooking methods which can only be experienced by tasting not by words</string>
    <string name="hotel_mobihot">Hotel MobiHot</string>
    <string name="checkin">Check-in</string>
    <string name="signup">Signup</string>
    <string name="select_date">Select Date</string>
</resources>
