<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:weightSum="3">

        <ImageView android:layout_width="match_parent" android:layout_height="0dp"
                   android:layout_weight="1"
                   android:scaleType="fitXY"
                   android:src="@drawable/banner"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                      android:orientation="vertical"
                      android:layout_margin="10dp"
                      android:layout_weight="2">


            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:gravity="end"
                            android:orientation="horizontal">

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:layout_toLeftOf="@id/check_in_btn"
                              android:orientation="vertical"
                              android:layout_marginRight="@dimen/xxhdpi_5">

                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:text="@string/select_date"
                              android:fontFamily="@font/opensans_light"
                              android:textSize="@dimen/t_xxh_12"/>

                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/txt_date"
                              android:text="@string/select_date"
                              android:textColor="@color/txt_color"
                              android:fontFamily="@font/opensans_regular"
                              android:textSize="@dimen/t_xxh_16"/>

                </LinearLayout>


                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/check_in_btn"
                        android:background="@drawable/rect_bor_select"
                        android:layout_toLeftOf="@id/check_out_btn"
                        android:textColor="@color/txt_color"
                        android:paddingLeft="@dimen/xxhdpi_10"
                        android:paddingRight="@dimen/xxhdpi_10"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:fontFamily="@font/opensans_bold"
                        android:text="check-in"/>

                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/check_out_btn"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/rect_bor_select"
                        android:textColor="@color/txt_color"
                        android:paddingLeft="@dimen/xxhdpi_10"
                        android:paddingRight="@dimen/xxhdpi_10"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:fontFamily="@font/opensans_bold"
                        android:layout_marginLeft="@dimen/xxhdpi_20"
                        android:text="check-out"/>

            </RelativeLayout>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/hotel_mobihot"
                      android:textColor="@color/black"
                      android:fontFamily="@font/opensans_bold"
                      android:textSize="@dimen/t_xxh_20"/>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/xxhdpi_20"
                      android:text="@string/hotel_desc"
                      android:fontFamily="@font/opensans_regular"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>