<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@color/login_bg"
                                                 tools:context=".LoginActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/xxhdpi_20">


        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

            <RelativeLayout
                    android:id="@+id/card_relative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_horizontal">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="@color/light_blue"
                            android:gravity="center"
                            android:padding="@dimen/xxhdpi_20">

                        <ImageView
                                android:layout_width="@dimen/xxhdpi_50"
                                android:layout_height="@dimen/xxhdpi_50"
                                android:src="@drawable/mobi"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|start"
                                android:fontFamily="@font/opensans_bold"
                                android:textSize="@dimen/t_xxh_26"
                                android:textColor="@color/white"
                                android:layout_marginLeft="@dimen/xxhdpi_10"
                                android:text="@string/mobiversa"/>

                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/login_linear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="visible">

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:text="@string/login"
                                  android:fontFamily="@font/opensans_bold"
                                  android:textSize="@dimen/t_xxh_18"
                                  android:layout_margin="@dimen/xxhdpi_10"
                                  android:textColor="@color/txt_color"
                                  android:gravity="center"/>


                        <EditText
                                android:id="@+id/login_user_name_edt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/xxhdpi_10"
                                android:background="@drawable/rect_bor"
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890 "
                                android:fontFamily="@font/opensans_regular"
                                android:hint="@string/user_name"
                                android:maxLines="1"
                                android:maxLength="20"
                                android:singleLine="true"
                                android:textCursorDrawable="@null"
                                android:textColor="@color/txt_color"
                                android:imeOptions="actionNext"
                                android:inputType="textFilter|textCapSentences"
                                android:padding="@dimen/xxhdpi_10"
                                android:textSize="@dimen/t_xxh_14"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/xxhdpi_10">

                            <android.support.design.widget.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="@android:color/transparent"
                                    app:hintEnabled="false"
                                    app:passwordToggleEnabled="true"
                                    app:passwordToggleTint="@color/grey">


                                <android.support.design.widget.TextInputEditText
                                        android:id="@+id/login_pswd_edt"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/rect_bor"
                                        android:fontFamily="@font/opensans_regular"
                                        android:hint="@string/password"
                                        android:maxLines="1"
                                        android:maxLength="20"
                                        android:singleLine="true"
                                        android:textCursorDrawable="@null"
                                        android:textColor="@color/txt_color"
                                        android:imeOptions="actionDone"
                                        android:inputType="textPassword"
                                        android:padding="@dimen/xxhdpi_10"
                                        android:textSize="@dimen/t_xxh_14"/>
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>


                        <Button
                                android:id="@+id/login_btn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/xxhdpi_10"
                                android:background="@drawable/rect_bor_filled"
                                android:backgroundTint="@color/login_btn_bg"
                                android:fontFamily="@font/opensans_bold"
                                android:padding="@dimen/xxhdpi_10"
                                android:text="@string/log_in"
                                android:textColor="@color/white"
                                android:textSize="@dimen/t_xxh_16"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:clickable="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/chart_color"
            android:progressTint="@color/colorPrimary"
            android:visibility="gone"/>


</android.support.design.widget.CoordinatorLayout>